samples/_failures_safe/1761350144_32f8a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0104af8f.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_0104af8f.c:157:5: error: expected expression at end of input
  157 |     if (start_node ==
      |     ^~
./samples/SAFE/__tmp_0104af8f.c:157:5: error: expected declaration or statement at end of input
